; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_vmscan.c_inactive_list_is_low.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_vmscan.c_inactive_list_is_low.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem_cgroup_zone = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mem_cgroup_zone*, i32)* @inactive_list_is_low to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inactive_list_is_low(%struct.mem_cgroup_zone* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mem_cgroup_zone*, align 8
  %5 = alloca i32, align 4
  store %struct.mem_cgroup_zone* %0, %struct.mem_cgroup_zone** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load %struct.mem_cgroup_zone*, %struct.mem_cgroup_zone** %4, align 8
  %10 = call i32 @inactive_file_is_low(%struct.mem_cgroup_zone* %9)
  store i32 %10, i32* %3, align 4
  br label %14

11:                                               ; preds = %2
  %12 = load %struct.mem_cgroup_zone*, %struct.mem_cgroup_zone** %4, align 8
  %13 = call i32 @inactive_anon_is_low(%struct.mem_cgroup_zone* %12)
  store i32 %13, i32* %3, align 4
  br label %14

14:                                               ; preds = %11, %8
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @inactive_file_is_low(%struct.mem_cgroup_zone*) #1

declare dso_local i32 @inactive_anon_is_low(%struct.mem_cgroup_zone*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
